--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 name: 7777777
-description: share what u get.
+description: For share something.
 meta_description: "Your New Jekyll Site, Blogging about stuffs"
 
 markdown: kramdown
@@ -12,5 +12,5 @@ google_analytics: 'UA-XXXXXXXX-X'
 gems: [jekyll-paginate]
 
 # Details for the RSS feed generator
-url:            'blog url'
-author:         'Your Name'
+url:            '#'
+author:         'Seven'
